# CommodityWatch

./: .env.example  .gitignore  AGENTS.md  README.md  app.py  argus_scraper.py  article_processing.py  calendar_watch_pipeline.py  classifier.py  dedupe_utils.py  enrichment_utils.py  feed_io.py  headline_associations.py  headline_taxonomy.py  index.html  inventory_watch_local_api.py  inventory_watch_published_db.py  inventory_watch_signals.py  migrate_categories.py  ner_spacy.py  requirements.txt  rss_scraper.py  sentiment_finbert.py  server.py
backend/: .env.example  README.md  pyproject.toml
backend/app/: __init__.py  main.py  worker.py
backend/app/api/: deps.py
backend/app/core/: config.py  logging.py  rate_limit.py  security.py
backend/app/db/: base.py  session.py
backend/app/ingest/: backfill.py  demand_backfill.py  registry.py
backend/app/modules/: __init__.py
backend/app/processing/: __init__.py  demandwatch.py  events.py  seasonal.py  snapshots.py
backend/app/repositories/: indicators.py  observations.py
backend/app/schemas/: auth.py  common.py  demandwatch.py  indicators.py
backend/artifacts/demandwatch/: audit.json  audit.md  published.sqlite
backend/artifacts/inventorywatch/: published_coverage_audit.json  published_coverage_audit.md
backend/scripts/: demandwatch.py  run_backfill.py  seed_reference_data.py
backend/seed/: app_modules.yml  commodities.yml  commodity_unit_conventions.yml  demand_verticals.yml  geographies.yml  release_definitions.yml  sources.yml  units.yml
backend/seed/indicators/: demandwatch.yml  inventorywatch.yml
(+3601 files in other folders)
